# code-atlas

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  STATE.md  TASKS.md  pyproject.toml
.github/workflows/: ci.yml
.orchestrator/log/: task-001.md  task-002.md  task-003.md  task-004.md  task-005.md  task-006.md  task-007.md  task-008.md  task-009.md  task-010.md  task-011.md  task-012.md  task-013.md  task-014.md  task-015.md  task-016.md  task-017.md  task-018.md  task-019.md  task-020.md  task-021.md  task-022.md  task-023.md  task-024.md  task-025.md  task-026.md  task-027.md  task-028.md  task-029.md  task-030.md  task-031.md  task-032.md  task-033.md  task-034.md  task-035.md
config/: costs.yaml  default.yaml
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  development.md  usage.md
eval/datasets/: seed.yaml
src/code_atlas/: __init__.py  cli.py  errors.py
src/code_atlas/agent/: __init__.py  prompts.py  qa.py  tools.py
src/code_atlas/api/: __init__.py  app.py  models.py  routes.py
src/code_atlas/config/: __init__.py  settings.py
src/code_atlas/domain/: __init__.py  answer.py  chunk.py  retrieval.py
src/code_atlas/evaluation/: __init__.py  datasets.py  metrics_correctness.py  metrics_cost.py  metrics_grounding.py  metrics_retrieval.py  report.py  runner.py
src/code_atlas/indexing/: __init__.py  edge_extractor.py  indexer.py  lexical_store.py  metadata_store.py  symbol_graph.py  vector_store.py
src/code_atlas/ingestion/: __init__.py  language.py  parser.py  pipeline.py  walker.py
src/code_atlas/providers/: __init__.py  base.py  ollama_embeddings.py  ollama_llm.py  registry.py
src/code_atlas/retrieval/: __init__.py  citation.py  hybrid.py  reranker.py
src/code_atlas/utils/: __init__.py  logging.py
tests/integration/agent/: test_qa.py
tests/integration/evaluation/: test_runner.py
tests/integration/indexing/: test_indexer.py
tests/integration/ingestion/: test_pipeline.py
tests/unit/: test_cli.py  test_errors.py
tests/unit/agent/: test_tools.py
tests/unit/api/: test_app.py
tests/unit/config/: test_settings.py
tests/unit/domain/: test_types.py
tests/unit/evaluation/: test_datasets.py  test_metrics_correctness.py  test_metrics_grounding.py  test_metrics_retrieval.py
tests/unit/indexing/: test_lexical_store.py  test_metadata_store.py  test_symbol_graph.py  test_vector_store.py
tests/unit/ingestion/: test_language.py  test_parser.py  test_walker.py
tests/unit/providers/: test_ollama_embeddings.py  test_ollama_llm.py  test_registry.py
tests/unit/retrieval/: test_citation.py  test_hybrid.py  test_reranker.py
tests/unit/utils/: test_logging.py
