[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-atlas"
version = "0.1.0"
description = "AI coding assistant for large polyglot repositories"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "code-atlas contributors" }]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = []

[project.scripts]
code-atlas = "code_atlas.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/code_atlas"]

[tool.uv]
package = true
