[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-atlas"
version = "0.1.0"
description = "AI coding assistant for large polyglot repositories"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "code-atlas contributors" }]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]
dependencies = [
    "structlog>=24.1,<26.0",
    "pydantic>=2.8,<3.0",
    "pydantic-settings>=2.4,<3.0",
    "pyyaml>=6.0,<7.0",
    "pathspec>=0.12,<1.0",
    "tree-sitter>=0.23,<1.0",
    "tree-sitter-language-pack>=0.10,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "lancedb>=0.13,<1.0",
    "networkx>=3.2,<4.0",
    "httpx>=0.27,<1.0",
    "typer>=0.12,<1.0",
    "rich>=13.0,<15.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6,<1.0",
    "mypy>=1.11,<2.0",
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<7.0",
    "pytest-asyncio>=0.23,<1.0",
    "types-pyyaml>=6.0,<7.0",
    "pre-commit>=3.7,<5.0",
]

[project.scripts]
code-atlas = "code_atlas.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/code_atlas"]

[tool.uv]
package = true

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = []

[tool.ruff.lint.per-file-ignores]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/code_atlas"]
plugins = []
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
markers = [
    "slow: long-running tests",
    "network: requires network access",
    "requires_ollama: requires a running Ollama instance",
]

[tool.coverage.run]
source = ["code_atlas"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]
